# lava_utils

./: .gitignore  CMakeLists.txt  Makefile
examples/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
examples/01-window/: README.md  window.cpp
examples/02-shaders/: README.md  shaders.cpp
examples/02-shaders/Shaders/Compiled/Fragment/: main.frag.spv
examples/02-shaders/Shaders/Compiled/Vertex/: main.vert.spv
examples/02-shaders/Shaders/Source/Fragment/: main.frag
examples/02-shaders/Shaders/Source/Vertex/: main.vert
include/lvutils/camera/: arcball_camera.hpp  camera.hpp  first_person_camera.hpp  frustum.hpp
include/lvutils/disk_io/: disk_io.hpp
include/lvutils/entity/: entity.hpp  material.hpp  mesh.hpp  mesh_loader.hpp  node.hpp  tag.hpp  transform.hpp  vertex.hpp
include/lvutils/libraries/: glm.hpp
include/lvutils/light/: direct_light.hpp
include/lvutils/math/: math.hpp
include/lvutils/physics/: collider.hpp  physics_world.hpp  rigid_body.hpp
include/lvutils/scripting/: lava_system.hpp  script.hpp  script_manager.hpp
include/lvutils/skylight/: skylight.hpp
lib/metal/: liblavautils.1.dylib  liblavautils.dylib
lib/vulkan/: liblavautils.1.dylib
src/camera/: arcball_camera.cpp  camera.cpp  first_person_camera.cpp  frustum.cpp
src/disk_io/: disk_io.cpp
src/entity/: material.cpp  mesh.cpp  mesh_loader.cpp  transform.cpp  vertex.cpp
src/math/: math.cpp
src/physics/: collider.cpp  physics_world.cpp  rigid_body.cpp
src/scripting/: script.cpp  script_manager.cpp
src/skylight/: skylight.cpp
